slightly different animations / plus fixed the horizontal scroll bar that appeared due to the animations as well as got rid of the lengthening of the vertical scroll bar due to the animations

--- a/style/generalStyle.css
+++ b/style/generalStyle.css
@@ -1,4 +1,5 @@
 /*General*/
+
 body {
     margin: 0;
     background: #00131E;
@@ -32,7 +33,10 @@ img {
 
 footer {
     background: black;
+    z-index: 1;
+    position: relative;
 }
+
 
 .center-items {
     display: flex;
